# visualis

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  freeglut_staticd.lib  script.bat  script.txt
0-WINDOWS-OPENGL/source/include/: defines.hpp
archive/: script.txt
fltk/: CMakeLists.txt  main.cpp
fltk/source/: main.cpp
fltk/source/color/: RGB.hpp
fltk/source/fltk/: application.cpp  application.hpp  widgetlist.cpp  widgetlist.hpp  window.cpp  window.hpp
fltk/source/helpful/: useful_functions.cpp  useful_functions.hpp
fltk/source/libraries/exceptio/: CMakeLists.txt  README.md
fltk/source/libraries/exceptio/example/: exceptio_example.cpp  main.cpp
fltk/source/libraries/exceptio/src/: assert.cpp  assert.hpp  assert_3rd.cpp  assert_3rd.hpp  exceptio.cpp  exceptio.hpp
fltk/source/libraries/fltk/FL/: Fl_Menu_Bar.H
fltk/source/settings/: settings.hpp
fltk/source/vampire5/: parser-converter.cpp  parser-converter.hpp
fltk/source/vertex-shape/: shape.cpp  shape.hpp  vertex.cpp
freeglut/: .gitignore  CMakeLists.txt  README.md
freeglut/guide/: README.md  old_README.md
freeglut/guide/examples/a/: Co.mat  atoms-coords.data  input  log  output  spins-00000000.data  spins-00000001.data  spins-00000002.data  spins-00000003.data  spins-00000004.data  spins-00000005.data  spins-00000006.data  spins-00000007.data  spins-00000008.data  spins-00000009.data
freeglut/guide/examples/b/: Ni.mat  atoms-coords.data  input  log  sconfiguration-00000027.vvis  spins-00000002.data  spins-00000005.data  spins-00000009.data  spins-00000011.data  spins-00000013.data  spins-00000016.data  spins-00000017.data  spins-00000018.data  spins-00000022.data  spins-00000023.data  spins-00000030.data  spins-00000031.data  visualis-settings.json
freeglut/guide/examples/c/: atoms-coords.data  sconfiguration-00000000.vvis  spins-00000000.data
freeglut/guide/examples/d/: output  sconfiguration-00000000.vvis  sconfiguration-00000001.vvis  sconfiguration-00000002.vvis  sconfiguration-00000003.vvis  sconfiguration-00000004.vvis  sconfiguration-00000005.vvis  sconfiguration-00000006.vvis  sconfiguration-00000007.vvis  sconfiguration-00000008.vvis  sconfiguration-00000009.vvis  sconfiguration-00000010.vvis  sconfiguration-00000011.vvis  sconfiguration-00000012.vvis  sconfiguration-00000013.vvis  sconfiguration-00000014.vvis  sconfiguration-00000015.vvis  sconfiguration-00000016.vvis  sconfiguration-00000017.vvis  sconfiguration-00000018.vvis  sconfiguration-00000019.vvis  sconfiguration-00000020.vvis  sconfiguration-00000021.vvis  sconfiguration-00000022.vvis  sconfiguration-00000023.vvis  sconfiguration-00000024.vvis  sconfiguration-00000025.vvis  sconfiguration-00000026.vvis  sconfiguration-00000028.vvis  sconfiguration-00000029.vvis  sconfiguration-00000030.vvis  sconfiguration-00000031.vvis  sconfiguration-00000032.vvis  spins-00000000.data  spins-00000001.data  spins-00000003.data  spins-00000004.data  spins-00000006.data  spins-00000007.data  spins-00000008.data  (+14 more)
freeglut/source/: README.md  color_class.cpp  console_application.cpp  console_application_settings.cpp  console_interpreter.cpp  creator_of_vertex_arr.cpp  drawing_shape_opengl.cpp  freeglut_window_settings.cpp  main.cpp  main_converter_vampire5.cpp  main_inter.cpp  parser-v5.cpp  point-spin.cpp  settings.cpp  shape.cpp  vec.cpp
freeglut/source/color/: RGB.cpp  RGB.hpp
freeglut/source/console/: console_interpretator.cpp  console_interpretator.hpp  defines_commands_codes.hpp  freeglut_drawer.cpp  freeglut_drawer.hpp
freeglut/source/helpful/: global_defines.hpp  useful_classes.cpp  useful_classes.hpp  useful_functions.cpp  useful_functions.hpp
freeglut/source/include/: defines.hpp  main_inter.hpp
freeglut/source/include/sample/: drawing_shape_opengl.hpp  vec.hpp
freeglut/source/include/user/: console_application.hpp  console_application_settings.hpp  console_interpreter.hpp  freeglut_window.hpp  freeglut_window_settings.hpp  settings.hpp
freeglut/source/layer-material/: layer.cpp  layer.hpp  material.cpp  material.hpp
freeglut/source/libraries/: README.md
freeglut/source/libraries/exceptio/: CMakeLists.txt  LICENSE  README.md
freeglut/source/libraries/exceptio/example/: main.cpp
freeglut/source/libraries/exceptio/include/: assert.hpp  exceptio.hpp
freeglut/source/libraries/exceptio/src/: exceptio.cpp
freeglut/source/rc/: vvis.aps  vvis.rc
freeglut/source/settings/: freeglut_settings.cpp  freeglut_settings.hpp  global_settings.cpp  global_settings.hpp  other_settings.cpp  other_settings.hpp  settings.cpp  settings.hpp
freeglut/source/vampire5/: parser-converter.cpp  parser-converter.hpp
freeglut/source/vertex-shape/: point.hpp  shape.cpp  shape.hpp  spin.hpp  vertex.cpp  vertex.hpp
freeglut/test/: parsing+converting+vertexcreating.cpp
freeglut/test/alpha-0.3.0/: readme.txt  visualis-settings.json
freeglut/test/alpha-0.4.0/: readme.txt  visualis-settings.json
freeglut/test/alpha-0.5.0/: readme.txt  sconfiguration-00000001.vvis  sconfiguration-00000002.vvis  sconfiguration-00000005.vvis  visualis-settings.json
manual/: freeglut-manual.tex
opengl/: CMakeLists.txt  README.md
opengl/guide/: README.md  cones.txt
opengl/source/: README.md  color_class.cpp  converter-v5.cpp  creator_of_vertex_arr.cpp  drawing_shape_opengl.cpp  main.cpp  parser-v5.cpp  point-spin.cpp  shape.cpp
opengl/source/include/: defines.hpp
opengl/source/include/parser-converter/: converter-v5.hpp  parser-v5.hpp
opengl/source/include/sample/: color_class.hpp  creator_of_vertex_arr.hpp  drawing_shape_opengl.hpp  point-spin.hpp  shape.hpp
opengl/source/libraries/tia/Exceptio/: CMakeLists.txt  README.md
opengl/source/libraries/tia/Exceptio/example/: assert_example.cpp
opengl/source/libraries/tia/Exceptio/include/tia/: assert.hpp  exceptio.hpp
opengl/source/libraries/tia/Exceptio/src/: exceptio.cpp
opengl/test/: parsing+converting+vertexcreating.cpp
src/: main.cpp
src/include/: visvamp.hpp
src/src/visvamp/: vampparse.cpp  (+2 more)
windows-opengl/: CMakeLists.txt
windows-opengl/source/: creator_of_vertex_arr.cpp
(+9 files in other folders)
